--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
